[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Job_Manager.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Roboto-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Jobs_Manager.gd" type="Script" id=3]
[ext_resource path="res://Scene/Job.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.992157, 0.992157, 1 )
border_width_bottom = 10
border_color = Color( 1, 0.992157, 0.992157, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.54902 )
border_color = Color( 0, 0, 0, 0.54902 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.729412, 0.729412, 0.729412, 1 )
border_color = Color( 1, 0.144531, 0.144531, 0.54902 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[node name="Job_manager" type="PanelContainer" groups=[
"job_manager",
]]
self_modulate = Color( 0.27451, 0.956863, 0.282353, 1 )
margin_left = 62.0
margin_top = 102.0
margin_right = 334.0
margin_bottom = -10.0
rect_min_size = Vector2( 272, 422 )
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 272.0
margin_bottom = 412.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 272.0
margin_bottom = 38.0
custom_constants/separation = 2
alignment = 1

[node name="Label" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 272.0
margin_bottom = 38.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 5
size_flags_stretch_ratio = 1.23
custom_styles/read_only = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 4 )
custom_colors/cursor_color = Color( 0.952941, 0.568627, 0.0784314, 1 )
custom_colors/font_color = Color( 0.00392157, 0.00392157, 0.00392157, 1 )
custom_colors/font_color_uneditable = Color( 0.905882, 0.905882, 0.905882, 1 )
text = "PLAN"
align = 1
editable = false
selecting_enabled = false
caret_blink = true

[node name="Planed_Manager" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 272.0
margin_bottom = 412.0
rect_min_size = Vector2( 272, 370 )
size_flags_horizontal = 3
size_flags_vertical = 4
custom_constants/separation = 15
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
Job = ExtResource( 4 )
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/Label" to="." method="_on_Label_gui_input"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/Label" to="." method="_on_Label_text_changed"]
